<resources>
    <string name="app_name">MaterialMotion</string>
    <string name="container_transform">Container Transform</string>
    <string name="to_activity">To Activity</string>
    <string name="label_y">Y</string>
    <string name="shared_x_axis">Shared X Axis (Fragment)</string>
    <string name="to_fragment">To Fragment</string>
    <string name="to_view">To View</string>
    <string name="shared_axis">Shared Axis</string>
    <string name="shared_z_axis">Shared Z Axis (View)</string>
    <string name="fade_through">Fade Through</string>
    <string name="transform">Transform</string>
    <string name="fade">Fade</string>
    <string name="bonus">Bonus</string>
    <string name="bottom_sheet">Bottom Sheet</string>
    <string name="container_transformed_to_fragment">Container transformed to Fragment</string>
    <string name="shared_container_to_fragment">shared_container_to_fragment</string>
    <string name="shared_container_to_activity">shared_container_to_activity</string>
    <string name="container_transform_to_activity">Container transform to Activity</string>
    <string name="container_transform_to_view">Container transform to View</string>
    <string name="motion_list">Motion List</string>
    <string name="fragment_transformed_with_shared_x_axis">Fragment transformed with Shared X Axis</string>
    <string name="activity_transformed_with_shared_y_axis">Activity Transformed with Shared Y Axis</string>
    <string name="view_with_shared_z_axis">View with Shared Z Axis</string>
    <string name="fade_through_fragment_title">This fragment loaded using Fade Through Motion</string>
    <string name="fadeable_view">Fadeable View</string>
    <string name="show_bottom_sheet">Show bottom sheet</string>
    <string name="shapeable_imageview">Shapeable ImageView</string>
</resources>