<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_container_transform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/container_transform"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_to_activity"
            style="@style/MaterialButton.Outlined.CustomIconed"
            android:layout_marginTop="6dp"
            android:text="@string/to_activity"
            android:transitionName="@string/shared_container_to_activity"
            app:icon="@drawable/ic_arrow_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actv_container_transform" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_to_fragment"
            style="@style/MaterialButton.Outlined.CustomIconed"
            android:layout_marginTop="6dp"
            android:text="@string/to_fragment"
            android:transitionName="@string/shared_container_to_fragment"
            app:icon="@drawable/ic_arrow_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mb_to_activity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_to_view"
            style="@style/MaterialButton.Outlined.CustomIconed"
            android:layout_marginTop="6dp"
            android:text="@string/to_view"
            app:icon="@drawable/ic_arrow_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mb_to_fragment" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_view_transform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mb_to_fragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actv_transform_view_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/container_transform_to_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/aciv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/actv_transform_view_title"
                app:srcCompat="@mipmap/ic_launcher" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>