<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    tools:context=".containertransform.ContainerTransformActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_y_shared_axis"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:text="@string/label_y"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_x_shared_axis"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:text="@string/shared_x_axis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_container_transform"
        style="@style/MaterialButton.Outlined.CustomIconed"
        android:layout_marginStart="12dp"
        android:text="@string/shared_z_axis"
        app:icon="@drawable/ic_arrow_start"
        app:layout_constraintBottom_toTopOf="@id/mb_x_shared_axis"
        app:layout_constraintStart_toEndOf="@id/mb_y_shared_axis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>